Wouldn't it be nice if MS could go a month without introducing some new helpful compiler feature no one asked for, and then setting its default value to the one that is *OBVIOUSLY WRONG*? Who would want to voluntarily *limit* their ability to step through code? It boggles the mind

--- a/PPLKiller/PPLKiller.vcxproj
+++ b/PPLKiller/PPLKiller.vcxproj
@@ -185,6 +185,7 @@
       <DiagnosticsFormat>Caret</DiagnosticsFormat>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
       <ConformanceMode>true</ConformanceMode>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <ProfileGuidedDatabase />
@@ -214,6 +215,7 @@
       <DiagnosticsFormat>Caret</DiagnosticsFormat>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
       <ConformanceMode>true</ConformanceMode>
+      <SupportJustMyCode>false</SupportJustMyCode>
     </ClCompile>
     <Link>
       <ProfileGuidedDatabase />
